--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -33,6 +33,7 @@
             {{ producto.nombre }}
           </a>
           - {{ producto.precio }}
+            <label> $ </label>
         </li>
       {% empty %}
         <li>Aun no hay productos disponibles.</li>
