--- a/main/templates/main/payment.html
+++ b/main/templates/main/payment.html
@@ -26,7 +26,7 @@
         },
         onApprove: function(data, actions) {
           return actions.order.capture().then(function(details) {
-            window.location.href = '${complete_payment_url}';
+            window.location.href = `${complete_payment_url}`;
           });
         }
       }).render('#paypal-button-container'); // Display payment options on your web page
