--- a/main/templates/registration/register.html
+++ b/main/templates/registration/register.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Registrate">
-</form>
-
+    <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-half">
+            <h1>Elige el tipo de cuenta que deseas</h1>
+            <a class="button is-link is-centered" href="/registro/cliente">Cliente</a>
+            <a class="button is-link" href="/registro/colaborador">Colaborador</a>
+          </div>
+        </div>
+    </div>
+    <ul>
+        <li><a href="{% url 'home' %}">Inicio</a></li>
+    </ul>
 {% endblock %}
