--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -16,15 +16,15 @@
           <p class="control">
             <span class="select is-rounded">
               <select name="categoria" id="categoria">
-                <option value="Todo">Todo</option>
-                <option value="Arte y artesanías">Arte y artesanías</option>
-                <option value="Computadoras">Computadoras</option>
-                <option value="Moda">Moda</option>
-                <option value="Belleza y cuidado personal">Belleza y cuidado personal</option>
-                <option value="Salud y bienestar">Salud y bienestar</option>
-                <option value="Deportes">Deportes</option>
-                <option value="Juguetes">Juguetes</option>
-                <option value="Electrodomésticos">Electrodomésticos</option>
+                <option value="9">Todo</option>
+                <option value="3">Arte y artesanías</option>
+                <option value="1">Computadoras</option>
+                <option value="4">Moda</option>
+                <option value="5">Belleza y cuidado personal</option>
+                <option value="6">Salud y bienestar</option>
+                <option value="2">Deportes</option>
+                <option value="7">Juguetes</option>
+                <option value="8">Electrodomésticos</option>
               </select>
             </span>
           </p>
