--- a/main/templates/main/producto_detail.html
+++ b/main/templates/main/producto_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3> {{ object.nombre }} </h3>
+    <h1 class="title">{{ object.nombre }}</h1>
     <div class="columns">
         {% for image in object.images.all %}
         <div class="column is-3">
@@ -17,7 +17,7 @@
         {% endfor %}
     </div>
     <ul>
-      <li><strong>Precio:</strong> {{ object.precio }}</li>
+      <li><strong>Precio:</strong> {{ object.precio }} $ </li>
       <li><strong>Descripcion:</strong> {{ object.descripcion }}</li>
       <li><strong>Categoria:</strong> {{ object.categoria.nombre }}</li>
       <li><strong>Proveedor:</strong> {{ object.proveedor }}</li>
