--- a/main/templates/main/pedido_list.html
+++ b/main/templates/main/pedido_list.html
@@ -7,8 +7,13 @@
             <ul>
                 {%for Pedido in  object_list%}
                 <li>
-                    <a href="{%url 'pedido-cliente' Pedido.pk %}">{{Pedido}}</a>
+                    <a href="{%url 'pedido-cliente' Pedido.pk %}">-------{{Pedido.fecha_creacion}},{{Pedido.estado}}</a>
                 </li>
+                {% empty %}
+                <div class="content">
+                    <h6>---------------------------------</h6>
+                    <h6>No tiene pedidos anteriores</h6>
+                </div>
                 {%endfor%}
             </ul>
             {% else %}
