--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -17,8 +17,8 @@
             <span class="select is-rounded">
               <select name="categoria" id="categoria">
                 <option value="abc">Todo</option>
-                {% for cat in categorías.all %}
-                <option value="{{cat.pk}}">{{cat.nombre}}</option>
+                {% for cat in categorías %}
+                  <option value="{{cat.pk}}"> {{cat.nombre}} </option>
                 {% endfor %}
               </select>
             </span>
