--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -43,4 +43,10 @@
     <ul>
       <li><a href="{% url 'product-list' %}">Ver Lista de Productos Completa</a></li>
     </ul>
+    <ul>
+      <li><a href="{% url 'proveedor-list' %}">Mira nuestros comercios</a></li>
+    </ul>
+    <ul>
+      <li><a href="{% url 'localizacion-list' %}">Mira nuestras zonas de cobertura</a></li>
+    </ul>
 {% endblock %}
