--- a/main/templates/main/proveedor_detail.html
+++ b/main/templates/main/proveedor_detail.html
@@ -2,13 +2,14 @@
 {% block content %}
     <h1> Linio Exp </h1>
     <hr>
-    <h3> {{ object.razon_social }} </h3>
+    <h3 class="title"> {{ object.razon_social }} </h3>
     <ul>
       <li><strong>RUC:</strong> {{ object.ruc }}</li>
       <li><strong>Razon Social:</strong> {{ object.razon_social }}</li>
       <li><strong>Telefono:</strong> {{ object.telefono }}</li>
     </ul>
     <hr>
+
     <ul>
       <li><a href="{% url 'proveedor-list' %}">Ver Lista de Proveedores</a></li>
       <li><a href="{% url 'home' %}">Inicio</a></li>
