--- a/main/templates/main/categoria_list.html
+++ b/main/templates/main/categoria_list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-        <h1>LinioExp</h1>
-        <h3>Categorias</h3>
+        <h3 class="title">Categorias</h3>
         <ul>
             {%for categoria in  object_list%}
             <li>
