--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+&nbsp
     {% if user.is_authenticated %}
     <h3> Hola {{ user.get_username }} </h3>
     <ul>
