--- a/main/templates/main/localizacion_list.html
+++ b/main/templates/main/localizacion_list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-        <h1>LinioExp</h1>
-        <h3>Localizaciones</h3>
+        <h3 class="title">Localizaciones</h3>
         <ul>
             {%for localizacion in  object_list%}
             <li>
