--- a/main/templates/main/proveedor_list.html
+++ b/main/templates/main/proveedor_list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-        <h1>LinioExp</h1>
-        <h3>Proveedores</h3>
+        <h3 class="title">Proveedores</h3>
         <ul>
             {%for proveedor in  object_list%}
             <li>
