--- a/main/templates/registration/register.html
+++ b/main/templates/registration/register.html
@@ -1,11 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+      &nbsp
     <div class="container">
+              &nbsp
         <div class="columns is-centered">
           <div class="column is-half">
             <h1>Elige el tipo de cuenta que deseas</h1>
+                    &nbsp
+                    &nbsp
             <a class="button is-link is-centered" href="/registro/cliente">Cliente</a>
+                    &nbsp
             <a class="button is-link" href="/registro/colaborador">Colaborador</a>
           </div>
         </div>
