--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -10,9 +10,10 @@
   <section class="section">
     <div class="container">
       <h1 class="title is-1"> Linio Express </h1>
-      <hr>
+
+      <form action="{% url 'product-list' %}" method="get">
       <div class="field has-addons">
-        <form action="{% url 'product-list' %}" method="get">
+
           <p class="control">
             <span class="select is-rounded">
               <select name="categoria" id="categoria">
@@ -34,9 +35,12 @@
           <p class="control is-expanded">
             <input class="input is-rounded" type="text"  name=q placeholder="Busca tu producto...">
           </p>
-        </form>
+
       </div>
+         </form>
+            &nbsp
       {% block content %}
+
       {% endblock %}
     </div>
   </section>
