--- a/main/templates/main/producto_detail.html
+++ b/main/templates/main/producto_detail.html
@@ -22,6 +22,7 @@
       <li><strong>Categoria:</strong> {{ object.categoria.nombre }}</li>
       <li><strong>Proveedor: </strong><a href="{%url 'proveedor-detail' object.proveedor.pk %}">{{object.proveedor}}</a></li>
     </ul>
+      &nbsp
     <div>
         {% if user.is_authenticated %}
         {% else %}
