--- a/main/templates/main/producto_list.html
+++ b/main/templates/main/producto_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-        <h1>LinioExp</h1>
-        <h3>Productos</h3>
+&nbsp
+        <h3 class="title">Productos</h3>
 <div class="columns is-multiline">
     {% for producto in object_list %}
         <div class="column is-4">
