--- a/main/templates/main/producto_list.html
+++ b/main/templates/main/producto_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 &nbsp
-        <h3 class="title">Productos</h3>
+<h3 class="title">Productos</h3>
 <div class="columns is-multiline">
     {% for producto in object_list %}
         <div class="column is-4">
@@ -23,7 +23,7 @@
                 </div>
             {% empty %}
                 <div class="content">
-                    <h6>---------------------------------</h6>
+                    &nbsp
                     <h6>Aun no hay productos disponibles.</h6>
                 </div>
             {% endfor %}
