--- a/main/templates/registration/register.html
+++ b/main/templates/registration/register.html
@@ -11,7 +11,7 @@
                     &nbsp
             <a class="button is-link is-centered" href="/registro/cliente">Cliente</a>
                     &nbsp
-            <a class="button is-link" href="/registro/colaborador">Colaborador</a>
+            <a class="button is-link" href="/registro/colaborador">Repartidor</a>
           </div>
         </div>
     </div>
