--- a/main/templates/main/pedido_list.html
+++ b/main/templates/main/pedido_list.html
@@ -1,21 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-        <h1>LinioExp</h1>
         {% if user.is_authenticated %}
             <h3> Hola {{ user.get_username }} </h3>
             <h3> Pedidos Anteriores </h3>
-            <ul>
+            <div class="content">
                 {%for Pedido in  object_list%}
                 <li>
-                    <a href="{%url 'pedido-cliente' Pedido.pk %}">-------{{Pedido.fecha_creacion}} | {{Pedido.estado}}</a>
+                    <a href="{%url 'pedido-cliente' Pedido.pk %}">{{Pedido.fecha_creacion}} | {{Pedido.estado}}</a>
                 </li>
                 {% empty %}
                 <div class="content">
-                    <h6>---------------------------------</h6>
+                    &nbsp
                     <h6>No tiene pedidos anteriores</h6>
                 </div>
                 {%endfor%}
-            </ul>
+            </div>
             {% else %}
             <h3> Hola para ver tus pedidos debes tener una cuenta de Linio</h3>
             <div class="container">
