--- a/main/templates/main/pedido_list.html
+++ b/main/templates/main/pedido_list.html
@@ -27,6 +27,9 @@
             </div>
         {% endif %}
         <ul>
+            Atención al cliente: 990154244
+        </ul>
+        <ul>
             <li><a href="{% url 'home' %}">Inicio</a></li>
         </ul>
 {% endblock %}
