--- a/main/templates/main/pedido_list.html
+++ b/main/templates/main/pedido_list.html
@@ -29,6 +29,9 @@
         <ul>
             Atención al cliente: 990154244
         </ul>
+<ul>
+            Dirección de Oficinas Linio Express: Av. Comercios 154
+        </ul>
         <ul>
             <li><a href="{% url 'home' %}">Inicio</a></li>
         </ul>
