--- a/main/templates/main/proveedor_list.html
+++ b/main/templates/main/proveedor_list.html
@@ -9,7 +9,7 @@
             {%endfor%}
         </ul>
         <ul>
-                        <li>------------------</li>
+                        &nbsp
             <li><a href="{% url 'home' %}">Inicio</a></li>
         </ul>
 {% endblock %}
