--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -27,21 +27,69 @@
         {% endfor %}
     {% endif %}
     <hr>
-    <h5> Ultimos productos </h5>
-    <ul>
-      {% for producto in latest_products %}
-        <li>
-          <a href="{% url 'product-detail' producto.pk %}">
-            {{ producto.nombre }}
-          </a>
-          - {{ producto.precio }}
-            <label> $ </label>
-        </li>
-      {% empty %}
-        <li>Aun no hay productos disponibles.</li>
-      {% endfor %}
-    </ul>
+    <h5><strong> Ultimos productos</strong> </h5>
+<div class="columns is-multiline">
+    {% for producto in latest_products %}
+        <div class="column is-one-quarter">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image">
+                                <img src="{{ producto.images.first.image.url|default:'https://via.placeholder.com/128' }}" alt="Imagen no disponible">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <h6>
+                                <a href="{% url 'product-detail' producto.pk %}">
+                                    {{ producto.nombre }}
+                                </a>
+                            </h6>
+                            <p>$ {{ producto.precio }}</p>
+                        </div>
+                    </div>
+                </div>
+            {% empty %}
+                <div class="content">
+                    &nbsp
+                    <h6>Aun no hay productos disponibles.</h6>
+                </div>
+            {% endfor %}
+        </div>
     <hr>
+{% if user.is_authenticated %}
+<h5><strong> Productos que podrian gustarte de la categoría: {{user.profile.cliente.preferencias.nombre}}</strong></h5>
+<div class="columns is-multiline">
+    {% for producto in productos %}
+        {% if producto.categoria == user.profile.cliente.preferencias %}
+        <div class="column is-one-quarter">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image">
+                                <img src="{{ producto.images.first.image.url|default:'https://via.placeholder.com/128' }}" alt="Imagen no disponible">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <h6>
+                                <a href="{% url 'product-detail' producto.pk %}">
+                                    {{ producto.nombre }}
+                                </a>
+                            </h6>
+                            <p>$ {{ producto.precio }}</p>
+                        </div>
+                    </div>
+                </div>
+        {% else %}
+        {% endif %}
+    {% empty %}
+        <div class="content">
+            &nbsp
+            <h6>Aun no hay productos disponibles.</h6>
+        </div>
+    {% endfor %}
+{% else %}
+{% endif %}
+        </div>
+
+
     <ul>
       <li><a href="{% url 'product-list' %}">Ver Lista de Productos Completa</a></li>
     </ul>
