--- a/main/templates/main/producto_list.html
+++ b/main/templates/main/producto_list.html
@@ -4,7 +4,7 @@
 <h3 class="title">Productos</h3>
 <div class="columns is-multiline">
     {% for producto in object_list %}
-        <div class="column is-4">
+        <div class="column is-one-quarter">
                     <div class="card">
                         <div class="card-image">
                             <figure class="image">
