--- a/main/templates/main/proveedor_detail.html
+++ b/main/templates/main/proveedor_detail.html
@@ -8,9 +8,36 @@
       <li><strong>Telefono:</strong> {{ object.telefono }}</li>
     </ul>
     <hr>
-
+<ul class="subtitle">Productos de {{ object.razon_social }}</ul>
+<div class="columns is-multiline">
+    {% for producto in productos %}
+        <div class="column is-one-quarter">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image">
+                                <img src="{{ producto.images.first.image.url|default:'https://via.placeholder.com/128' }}" alt="Imagen no disponible">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <h6>
+                                <a href="{% url 'product-detail' producto.pk %}">
+                                    {{ producto.nombre }}
+                                </a>
+                            </h6>
+                            <p>$ {{ producto.precio }}</p>
+                        </div>
+                    </div>
+                </div>
+            {% empty %}
+                <div class="content">
+                    &nbsp
+                    <h6>Aun no hay productos disponibles.</h6>
+                </div>
+            {% endfor %}
+        </div>
     <ul>
       <li><a href="{% url 'proveedor-list' %}">Ver Lista de Proveedores</a></li>
       <li><a href="{% url 'home' %}">Inicio</a></li>
     </ul>
 {% endblock %}
+
