--- a/main/templates/main/producto_list.html
+++ b/main/templates/main/producto_list.html
@@ -2,6 +2,7 @@
 {% block content %}
 &nbsp
 <h3 class="title">Productos</h3>
+<h3>{{query}}</h3>
 <div class="columns is-multiline">
     {% for producto in object_list %}
         <div class="column is-one-quarter">
