--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,8 +9,8 @@
   <body>
   <section class="section">
     <div class="container">
-      <h1 class="title is-1"> Linio Express </h1>
-
+      <h1 > <center><img src="https://blog.linio.com.pe/wp-content/uploads/2019/05/Linio-Logo-Oficial.png" width="250" height="200"/></center> </h1>
+      &nbsp
       <form action="{% url 'product-list' %}" method="get">
       <div class="field has-addons">
 
