--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -27,7 +27,7 @@
         {% endfor %}
     {% endif %}
     <hr>
-    <h5><strong> Ultimos productos</strong> </h5>
+    <h5><strong> Últimos productos</strong> </h5>
 <div class="columns is-multiline">
     {% for producto in latest_products %}
         <div class="column is-one-quarter">
