--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,8 +5,8 @@
     {% if user.is_authenticated %}
     <h3> Hola {{ user.get_username }} </h3>
     <ul>
-      <li><a href="{% url 'pedido-list' %}">Ver Pedidos</a></li>
-      <li><a href="{% url 'pedido-detail' %}">Ver Carrito</a></li>
+      <a><a href="{% url 'pedido-list' %}">Ver Pedidos</a></a> |
+      <a><a href="{% url 'pedido-detail' %}">Ver Carrito</a></a>
     </ul>
     <p>
       <a href="{% url 'logout' %}">Cierra Sesion</a>
